--- a/BallClockRepititionCounter/MainWindow.xaml
+++ b/BallClockRepititionCounter/MainWindow.xaml
@@ -1,4 +1,23 @@
-﻿<Window x:Class="BallClockRepititionCounter.MainWindow"
+﻿<!--
+    /*
+ * Ball Clock Simulator
+ * Final Assignment PROG8010, Group 1
+ * Author: Lucas Currah, 7674542
+ * Conestoga College
+ * 
+ * Group members:
+ *      Oleksandr Rudavka
+ *      Jonathan Nagata
+ *      Niral Gandhi
+ *      Tanmay Teckchandani
+ *      Priya Tharuman
+ *      Krishna Kanhaiya
+ *      Lucas Currah
+ * 
+ * 7 December, 2016
+ */
+    -->
+    <Window x:Class="BallClockRepititionCounter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
